# tolio

./: .gitignore  .scrutinizer.yml  Cargo.toml  README.md  install_dependencies.sh  pyproject.toml  requirements.txt
files/data/: portfolio.db  test_portfolio.db
src/: database_module.py  ext_db.rs  gui_functionalities.py  main.py  portfolio.db
src/assets/styling/: set_settings.json
src/database/: database.py  init_db.sql
src/gui/: __init__.py  appearance.py  records.py  show_institutions_held_window.py  show_securities_window.py  show_stock_split_window.py  show_transaction_window.py  window_add_transaction.py  window_stock_split.py  window_transfer.py
src/gui_bridge/: __init__.py  gui_bridge.py  test.py
src/rust/: README.md  data_types.rs  lib.rs
src/rust/db_methods/: bulk_insert_transactions.rs  insert_csv.rs  insert_into_transactions.rs  stock_split.rs  update.rs
src/rust/dt_methods/: rawtransaction.rs  transaction.rs
src/utils/: __init__.py  export_csv.py  insert_csv.py  resource_path.py  standardize_entry.py  style_settings.py
test/: db_test_portfolio.db  test_database_module.py  test_gui_bridge.py  test_gui_functionalities.py  test_py_db_query.sql  test_rust_extension.py  test_standardized_entry.py
test/queries/: test_rs_db_query.sql
