[package]
name = "tolio"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tolio"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
csv = "1.1"
serde = {version = "1", features = ["derive"]}
